@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-09T00:29:30Z",
-  "count_outdated" : 701,
-  "uniques_outdated" : 155,
+  "timestamp" : "2022-12-11T00:32:25Z",
+  "count_outdated" : 702,
+  "uniques_outdated" : 156,
   "count" : 707,
   "uniques" : 159,
   "views" : [
-    {
-      "timestamp": "2022-11-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-12-04T00:00:00Z",
       "count": 1,
